add more updates

--- a/site/components/index.html
+++ b/site/components/index.html
@@ -38,7 +38,7 @@
     
     
       
-        <title>Presence Detection - Isabella Gross Alström</title>
+        <title>Components - Isabella Gross Alström</title>
       
     
     
@@ -107,7 +107,7 @@
     <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off">
     <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
     
-      <a href="#presence-detection" tabindex="1" class="md-skip">
+      <a href="#157-loaded-components" tabindex="1" class="md-skip">
         Skip to content
       </a>
     
@@ -133,7 +133,7 @@
                 Isabella Gross Alström
               </span>
               <span class="md-header-nav__topic">
-                Presence Detection
+                Components
               </span>
             
           
@@ -262,7 +262,7 @@
 
 
   <li class="md-nav__item">
-    <a href="../000-hass/" title="Home Assistant" class="md-nav__link">
+    <a href="../hass/" title="Home Assistant" class="md-nav__link">
       Home Assistant
     </a>
   </li>
@@ -274,7 +274,7 @@
 
 
   <li class="md-nav__item">
-    <a href="../001-ecosystem/" title="Ecosystem" class="md-nav__link">
+    <a href="../ecosystem/" title="Ecosystem" class="md-nav__link">
       Ecosystem
     </a>
   </li>
@@ -286,7 +286,7 @@
 
 
   <li class="md-nav__item">
-    <a href="../002-lovelace/" title="Lovelace" class="md-nav__link">
+    <a href="../lovelace/" title="Lovelace" class="md-nav__link">
       Lovelace
     </a>
   </li>
@@ -298,20 +298,8 @@
 
 
   <li class="md-nav__item">
-    <a href="../003-hassio-addons/" title="Addons" class="md-nav__link">
+    <a href="../hassio-addons/" title="Addons" class="md-nav__link">
       Addons
-    </a>
-  </li>
-
-    
-      
-      
-      
-
-
-  <li class="md-nav__item">
-    <a href="../004-components/" title="Components" class="md-nav__link">
-      Components
     </a>
   </li>
 
@@ -329,11 +317,11 @@
     
     
       <label class="md-nav__link md-nav__link--active" for="__toc">
-        Presence Detection
+        Components
       </label>
     
-    <a href="./" title="Presence Detection" class="md-nav__link md-nav__link--active">
-      Presence Detection
+    <a href="./" title="Components" class="md-nav__link md-nav__link--active">
+      Components
     </a>
     
       
@@ -345,8 +333,8 @@
     <ul class="md-nav__list" data-md-scrollfix>
       
         <li class="md-nav__item">
-  <a href="#presence-detection" title="Presence-detection" class="md-nav__link">
-    Presence-detection
+  <a href="#157-loaded-components" title="157 Loaded Components:" class="md-nav__link">
+    157 Loaded Components:
   </a>
   
 </li>
@@ -368,8 +356,44 @@
 
 
   <li class="md-nav__item">
-    <a href="../999-linux-commands/" title="Linux Commands" class="md-nav__link">
+    <a href="../presence-detection/" title="Presence Detection" class="md-nav__link">
+      Presence Detection
+    </a>
+  </li>
+
+    
+      
+      
+      
+
+
+  <li class="md-nav__item">
+    <a href="../dev/" title="My Hass development" class="md-nav__link">
+      My Hass development
+    </a>
+  </li>
+
+    
+      
+      
+      
+
+
+  <li class="md-nav__item">
+    <a href="../linux-commands/" title="Linux Commands" class="md-nav__link">
       Linux Commands
+    </a>
+  </li>
+
+    
+      
+      
+      
+
+
+  <li class="md-nav__item">
+    <a href="../featured/" title="Featured" class="md-nav__link">
+      Featured
     </a>
   </li>
 
@@ -393,8 +417,8 @@
     <ul class="md-nav__list" data-md-scrollfix>
       
         <li class="md-nav__item">
-  <a href="#presence-detection" title="Presence-detection" class="md-nav__link">
-    Presence-detection
+  <a href="#157-loaded-components" title="157 Loaded Components:" class="md-nav__link">
+    157 Loaded Components:
   </a>
   
 </li>
@@ -415,19 +439,171 @@
             <article class="md-content__inner md-typeset">
               
                 
-                  <a href="https://github.com/isabellaalstrom/HomeAssistantConfiguration/edit/master/docs/005-presence-detection.md" title="Edit this page" class="md-icon md-content__icon">&#xE3C9;</a>
+                  <a href="https://github.com/isabellaalstrom/HomeAssistantConfiguration/edit/master/docs/components.md" title="Edit this page" class="md-icon md-content__icon">&#xE3C9;</a>
                 
                 
-                  <h1>Presence Detection</h1>
+                  <h1>Components</h1>
                 
-                <h3 id="presence-detection">Presence-detection</h3>
+                <h2 id="157-loaded-components">157 Loaded Components:</h2>
 <ul>
-<li>Ios-app for Hass</li>
-<li>Nmap</li>
-<li>BT tracking</li>
-<li>~~Homekit~~</li>
+<li>alarm_control_panel</li>
+<li>alarm_control_panel.bwalarm</li>
+<li>alarm_control_panel.verisure</li>
+<li>alert</li>
+<li>api</li>
+<li>auth</li>
+<li>automation</li>
+<li>binary_sensor</li>
+<li>binary_sensor.deconz</li>
+<li>binary_sensor.mqtt</li>
+<li>binary_sensor.ring</li>
+<li>binary_sensor.template</li>
+<li>binary_sensor.verisure</li>
+<li>binary_sensor.workday</li>
+<li>binary_sensor.xiaomi_aqara</li>
+<li>binary_sensor.zwave</li>
+<li>calendar</li>
+<li>calendar.google</li>
+<li>camera</li>
+<li>camera.generic</li>
+<li>camera.mqtt</li>
+<li>camera.ring</li>
+<li>camera.verisure</li>
+<li>cast</li>
+<li>climate</li>
+<li>climate.zwave</li>
+<li>cloud</li>
+<li>config</li>
+<li>config.auth</li>
+<li>config.auth_provider_homeassistant</li>
+<li>config.automation</li>
+<li>config.config_entries</li>
+<li>config.core</li>
+<li>config.customize</li>
+<li>config.device_registry</li>
+<li>config.entity_registry</li>
+<li>config.group</li>
+<li>config.script</li>
+<li>config.zwave</li>
+<li>conversation</li>
+<li>counter</li>
+<li>cover</li>
+<li>cover.deconz</li>
+<li>cover.mqtt</li>
+<li>cover.xiaomi_aqara</li>
+<li>cover.zwave</li>
+<li>custom_updater</li>
+<li>customizer</li>
+<li>deconz</li>
+<li>device_tracker</li>
+<li>fan</li>
+<li>fan.zwave</li>
+<li>ffmpeg</li>
+<li>frontend</li>
+<li>google</li>
+<li>group</li>
+<li>hassio</li>
+<li>history</li>
+<li>homekit</li>
+<li>http</li>
+<li>ifttt</li>
+<li>input_boolean</li>
+<li>input_number</li>
+<li>input_select</li>
+<li>ios</li>
+<li>lifx</li>
+<li>light</li>
+<li>light.deconz</li>
+<li>light.group</li>
+<li>light.lifx</li>
+<li>light.mqtt</li>
+<li>light.rfxtrx</li>
+<li>light.xiaomi_aqara</li>
+<li>light.zwave</li>
+<li>lock</li>
+<li>lock.verisure</li>
+<li>lock.xiaomi_aqara</li>
+<li>lock.zwave</li>
+<li>logbook</li>
+<li>logger</li>
+<li>lovelace</li>
+<li>map</li>
+<li>media_player</li>
+<li>media_player.cast</li>
+<li>media_player.plex</li>
+<li>media_player.samsungtv</li>
+<li>media_player.sonos</li>
+<li>media_player.spotify</li>
+<li>mqtt</li>
+<li>notify</li>
+<li>notify.discord</li>
+<li>notify.group</li>
+<li>notify.ios</li>
+<li>onboarding</li>
+<li>panel_custom</li>
+<li>panel_iframe</li>
+<li>plant</li>
+<li>proximity</li>
+<li>python_script</li>
+<li>recorder</li>
+<li>rfxtrx</li>
+<li>ring</li>
+<li>scene</li>
+<li>scene.deconz</li>
+<li>scene.homeassistant</li>
+<li>script</li>
+<li>sensor</li>
+<li>sensor.command_line</li>
+<li>sensor.darksky</li>
+<li>sensor.deconz</li>
+<li>sensor.history_stats</li>
+<li>sensor.imap_email_content</li>
+<li>sensor.ios</li>
+<li>sensor.krisinformation</li>
+<li>sensor.min_max</li>
+<li>sensor.mqtt</li>
+<li>sensor.plex_recently_added</li>
+<li>sensor.pollenkoll</li>
+<li>sensor.ring</li>
+<li>sensor.scrape</li>
+<li>sensor.speedtest</li>
+<li>sensor.systemmonitor</li>
+<li>sensor.template</li>
+<li>sensor.time_date</li>
+<li>sensor.trafikverket_weatherstation</li>
+<li>sensor.verisure</li>
+<li>sensor.version</li>
+<li>sensor.waze_travel_time</li>
+<li>sensor.xiaomi_aqara</li>
+<li>sensor.zwave</li>
+<li>shell_command</li>
+<li>shopping_list</li>
+<li>smhi</li>
+<li>sonos</li>
+<li>sun</li>
+<li>switch</li>
+<li>switch.broadlink</li>
+<li>switch.deconz</li>
+<li>switch.mqtt</li>
+<li>switch.rfxtrx</li>
+<li>switch.template</li>
+<li>switch.verisure</li>
+<li>switch.xiaomi_aqara</li>
+<li>switch.zwave</li>
+<li>system_log</li>
+<li>tts</li>
+<li>updater</li>
+<li>verisure</li>
+<li>weather</li>
+<li>weather.darksky</li>
+<li>weather.smhi</li>
+<li>webhook</li>
+<li>websocket_api</li>
+<li>xiaomi_aqara</li>
+<li>zeroconf</li>
+<li>zone</li>
+<li>zwave</li>
 </ul>
-<p>"Better presence" Appdaemon app from <a href="https://github.com/helto4real/hassio/tree/master/appdaemon/apps/presence">helto4real</a> knits gps, bt and wifi tracking together into one tracker.</p>
                 
                   
                 
@@ -448,7 +624,7 @@
     <div class="md-footer-nav">
       <nav class="md-footer-nav__inner md-grid">
         
-          <a href="../004-components/" title="Components" class="md-flex md-footer-nav__link md-footer-nav__link--prev" rel="prev">
+          <a href="../hassio-addons/" title="Addons" class="md-flex md-footer-nav__link md-footer-nav__link--prev" rel="prev">
             <div class="md-flex__cell md-flex__cell--shrink">
               <i class="md-icon md-icon--arrow-back md-footer-nav__button"></i>
             </div>
@@ -457,19 +633,19 @@
                 <span class="md-footer-nav__direction">
                   Previous
                 </span>
-                Components
+                Addons
               </span>
             </div>
           </a>
         
         
-          <a href="../999-linux-commands/" title="Linux Commands" class="md-flex md-footer-nav__link md-footer-nav__link--next" rel="next">
+          <a href="../presence-detection/" title="Presence Detection" class="md-flex md-footer-nav__link md-footer-nav__link--next" rel="next">
             <div class="md-flex__cell md-flex__cell--stretch md-footer-nav__title">
               <span class="md-flex__ellipsis">
                 <span class="md-footer-nav__direction">
                   Next
                 </span>
-                Linux Commands
+                Presence Detection
               </span>
             </div>
             <div class="md-flex__cell md-flex__cell--shrink">
@@ -492,6 +668,17 @@
       </div>
       
         
+  <div class="md-footer-social">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.css">
+    
+      <a href="https://github.com/isabellaalstrom" class="md-footer-social__link fa fa-github"></a>
+    
+      <a href="https://twitter.com/teachingbirds" class="md-footer-social__link fa fa-twitter"></a>
+    
+      <a href="https://www.linkedin.com/in/isabellaalstrom/" class="md-footer-social__link fa fa-linkedin"></a>
+    
+  </div>
+
       
     </div>
   </div>
